HTMLコーディング

--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
 </head>
 
 <body>
-    <nav>
-        nav
-    </nav>
-    <header>
-        header
-    </header>
-    <main>
-        main
-    </main>
-    <footer>
-        footer
-    </footer>
+    <div id="root">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Admin</a></li>
+            </ul>
+        </nav>
+        <header>
+            <h1>Welcome</h1>
+        </header>
+        <main>
+            <section>
+                <h2>Information</h2>
+                <img src="https://source.unsplash.com/random/200x200"/>
+                <div>
+                    <p>Welcome to our website.</p>
+                </div>
+            </section>
+        </main>
+        <footer>
+            footer
+        </footer>
+    </div>
 </body>
 
 </html>
