--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             align-items: center;
         }
 
+        main section img{
+            border-radius: 5px;
+        }
+
         footer {
             background-color: #666;
             color: #fff;
@@ -96,13 +100,13 @@
     <div id="root">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" style="font-weight:bold;">Home</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Admin</a></li>
             </ul>
         </nav>
         <header>
-            <h1>Welcome</h1>
+            <h1>Home</h1>
         </header>
         <main>
             <section>
