--- a/index.html
+++ b/index.html
@@ -4,125 +4,49 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>minimum sample</title>
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        #root {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        nav {
-            background-color: #666;
-        }
-
-        nav ul {
-            display: flex;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav ul a {
-            display: block;
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 15px;
-        }
-
-        nav ul a:hover {
-            color: #aaa;
-        }
-
-        header {
-            background: url(https://source.unsplash.com/random/600x200) center/cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        header h1 {
-            color: #fff;
-            text-shadow: 0 0 5px #333;
-        }
-
-        main {
-            margin-bottom: auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        main section {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        main section img{
-            border-radius: 5px;
-        }
-
-        footer {
-            background-color: #666;
-            color: #fff;
-            height: 60px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 30px;
-        }
-
-        @media screen and (min-width:640px) {
-
-            nav,
-            footer {
-                background-color: #669;
-            }
-
-            main {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-evenly;
-            }
-
-        }
-    </style>
+    <title>minimum sample -> Home</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div id="root">
         <nav>
             <ul>
-                <li><a href="#" style="font-weight:bold;">Home</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Admin</a></li>
+                <li><a href="index.html" style="font-weight:bold;">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="admin.html">Admin</a></li>
             </ul>
         </nav>
         <header>
             <h1>Home</h1>
         </header>
         <main>
-            <section>
-                <h3>Information1</h3>
-                <img src="https://source.unsplash.com/random/300x300?p=1" />
+
+            <section class="intro">
+                <h2>Welcome</h2>
                 <div>
-                    <p>Welcome to our website.</p>
+                    <p>こんにちは。ミニマムサンプルページへようこそ。</p>
                 </div>
             </section>
-            <section>
-                <h3>Information2</h3>
-                <img src="https://source.unsplash.com/random/300x300?p=2" />
-                <div>
-                    <p>Welcome to our website.</p>
+
+            <section class="content">
+                <div class="box">
+                    <h3>Information1</h3>
+                    <img src="https://source.unsplash.com/300x300/?kamakura" />
+                    <div>
+                        <p>Welcome to our website.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <h3>Information2</h3>
+                    <img src="https://source.unsplash.com/300x300/?yokohama" />
+                    <div>
+                        <p>Welcome to our website.</p>
+                    </div>
                 </div>
             </section>
+
         </main>
         <footer>
             &copy minimum sample.
